--- a/story_book/src/Components /Button/Button.css
+++ b/story_book/src/Components /Button/Button.css
@@ -8,3 +8,39 @@ button {
   color: white;
   border: #0069d9;
 }
+
+.button-danger {
+  background-color: #cc2828;
+  color: white;
+  border: #cc2828;
+}
+
+.button-success {
+  background-color: #3bc91f;
+  color: white;
+  border: #3bc91f;
+}
+
+.button-warning {
+  background-color: #d4b817;
+  color: white;
+  border: #d4b817;
+}
+
+.button-default {
+  background-color: #000000;
+  color: white;
+  border: #000000;
+}
+
+.dark {
+}
+
+.white {
+}
+
+.opaque {
+}
+
+.big {
+}
