--- a/src/Components /Button/Button.css
+++ b/src/Components /Button/Button.css
@@ -50,18 +50,16 @@ button {
 }
 
 .button-white {
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
-/* .button-heart {
-  background-image: url("hearts.png");
-  background-position: 5% 50%;
-  position: absolute;
-  background-repeat: no-repeat;
+.button-light {
+  background: rgba(51, 160, 255, 0.2);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
-.button-cart {
-  background-image: url("cart_2.png");
-  background-position: 5% 50%;
-  position: absolute;
-  background-repeat: no-repeat;
-} */
+img {
+  margin: 2px;
+}
