--- a/src/Components /Counter/Counter.css
+++ b/src/Components /Counter/Counter.css
@@ -1,10 +1,15 @@
 .counter {
   display: flex;
   flex-direction: row;
-  background-color: teal;
-  color: white;
+  background-color: lightgray;
+  margin: 0;
   padding: 5px;
-  margin: 5px;
   height: 50px;
   width: 125px;
+  border-radius: 5px;
+}
+
+.counter > button {
+  border: none;
+  background-color: lightgray;
 }
