--- a/src/Components /Button/Button.css
+++ b/src/Components /Button/Button.css
@@ -9,10 +9,20 @@ button {
   border: #0069d9 solid 1px;
 }
 
+.button-primary:hover {
+  cursor: pointer;
+  opacity: 0.7;
+}
+
 .button-danger {
   background-color: #cc2828;
   color: #cc2828;
   border: #cc2828 solid 1px;
+}
+
+.button-danger:hover {
+  cursor: pointer;
+  opacity: 0.7;
 }
 
 .button-success {
@@ -21,16 +31,31 @@ button {
   border: #3bc91f solid 1px;
 }
 
+.button-success:hover {
+  cursor: pointer;
+  opacity: 0.7;
+}
+
 .button-warning {
   background-color: #d4b817;
   color: #d4b817;
   border: #d4b817 solid 1px;
 }
 
+.button-warning:hover {
+  cursor: pointer;
+  opacity: 0.7;
+}
+
 .button-default {
   background-color: black;
   color: black;
   border: black solid 1px;
+}
+
+.button-default:hover {
+  cursor: pointer;
+  opacity: 0.7;
 }
 
 .button-dark {
