--- a/src/Components /Voucher/Voucher.css
+++ b/src/Components /Voucher/Voucher.css
@@ -1,26 +1,11 @@
-form {
-  height: 100%;
-  width: 100%;
-}
-.container {
+.voucher-container {
   display: flex;
   flex-direction: row;
-  height: 100%;
-  width: 100%;
   margin: 0;
-}
-
-label {
-  background-color: royalblue;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
-  padding: 10px;
-  font-size: 15px;
+  padding: 0;
 }
 
 .Voucher-medium {
-  height: 50px;
+  height: 200px;
+  color: black !important;
 }
