--- a/src/Components /Input/Input.css
+++ b/src/Components /Input/Input.css
@@ -1,8 +1,11 @@
+@import url("https://fonts.googleapis.com/css?family=Baloo+2&display=swap");
+
 .container {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100px;
+  font-family: "Baloo 2", cursive;
 }
 
 input {
