--- a/src/Components /Input/Input.css
+++ b/src/Components /Input/Input.css
@@ -3,7 +3,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  /* width: 100%; */
   height: 100px;
   font-family: "Baloo 2", cursive;
 }
